methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: not found: value green
      if(getGroundColor()==green){
                           ^