methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if(isFacingWall==true){return false;}
  	else{
      forward();
      if(getGroundColor()==green){
      	back();
        return true;
      }
      else{
        back();
        return false;
      }
      
    }
}